# comics

./: .env.example  README.md  pyproject.toml
src/: conftest.py
src/comics/: admin.py  models.py  serializers.py  urls.py  views.py
src/comics/migrations/: 0001_initial.py  0002_add_comics.py
src/comics/tests/: factories.py  fixtures.py  test_comics.py
src/core/: settings.py  urls.py
src/ratings/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
src/ratings/migrations/: 0001_initial.py
src/ratings/tests/: factories.py  fixtures.py  test_ratings.py
src/users/: models.py  serializers.py
src/users/migrations/: 0001_initial.py
src/users/tests/: factories.py  test_users.py
